fix: fix scrollbar on safari

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -38,3 +38,21 @@ body {
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 50;
 }
+
+::-webkit-scrollbar {
+  width: 6px;
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: rgb(196, 196, 196);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgb(102, 102, 102);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgb(80, 80, 80);
+}
